--- a/package.json
+++ b/package.json
@@ -9,8 +9,13 @@
     "boostrap": "^2.0.0",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "cors-anywhere": "^0.4.4",
+    "express": "^4.19.2",
+    "http-proxy-middleware": "^3.0.0",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.2",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
