--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "boostrap": "^2.0.0",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "cors": "^2.8.5",
     "cors-anywhere": "^0.4.4",
     "express": "^4.19.2",
     "http-proxy-middleware": "^3.0.0",
